menambah seeder
